# recommender-engine

./: Dockerfile  README.md  example.txt  pyproject.toml  setup.cfg
analysis/: 1_evidence_log.ipynb  2_popular_and_trending_articles.ipynb  3_analysis_of_association_rules.ipynb  4_analysis_of_users_getting_recommendations.ipynb  test.ipynb
association_rules_scheduler/: main.py  requirements.txt  rules_lookup_schema.json  rules_schema.json
association_rules_scheduler/helper_functions/: data_cleaning_functions.py  db_connection.py
recommender_engine/: __init__.py  main.py
recommender_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
recommender_engine/data_layer/: db_connect.py  popular_articles.py  recommended_for_you.py  trending_articles.py
recommender_engine/endpoints/: popular_articles.py  recommended_for_you.py  trending_articles.py
recommender_engine/logic_layer/: popular_articles.py  recommended_for_you.py  trending_articles.py
recommender_engine/schemas/: response_schemas.py
recommender_engine/utils/: custom_error_handlers.py
