[metadata]
name = recommender_engine
version = v0.1
author = Regitze Sdun
description = recommender engine
url = https://github.com/RegitzeSdun/recommender-engine

[options]
packages = find:
install_requires =
    python-dotenv>=0.15.0
    pydantic>=1.7.3
include_package_data = True

python_requires = >=3.8.0

[options.package_data]
* = *.json

[options.extras_require]
server =
    requests>=2.18.4
    fastapi>=0.63.0
    starlette>=0.13.6
    uvicorn>=0.13.3
    pytz>=2021.3
    numpy>=1.14.5
    scipy>=0.19.1
    fastapi_versioning>=0.9.1
    google-cloud==0.34.0
    google-cloud-bigquery==3.4.0
    google-cloud-bigquery-storage==2.16.2
    sqlalchemy==1.4.46
    sqlalchemy-bigquery>=1.5.0
    pandas>=1.5.2

tests =
    vulture>=2.3
    black>=21.9b0
    mypy>=0.910
    pytest>=6.2.5,<7.2.0
    typeguard>=2.13.3
    lxml>=4.6.3

all =
    %(server)s
    %(tests)s

